--- a/app/src/main/res/layout/fragment_list_articles.xml
+++ b/app/src/main/res/layout/fragment_list_articles.xml
@@ -13,5 +13,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_articles"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
+
 </LinearLayout>
