--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -8,37 +8,73 @@
               android:orientation="vertical">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardview_article"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/cardview_article">
+        android:layout_height="wrap_content">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                       android:id="@+id/linear_layout_article_card"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:gravity="center_vertical"
+                      android:gravity="center"
                       android:orientation="vertical">
 
             <TextView
                 android:id="@+id/item_headline"
-                android:text="Headline"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_margin="5dp"/>
 
             <ImageView
                 android:id="@+id/item_thumbnail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:adjustViewBounds="true"
+                android:layout_gravity="center"
+                android:layout_margin="5dp"/>
 
             <TextView
                 android:id="@+id/item_abstract"
-                android:text="Abstract"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_margin="5dp"/>
 
+            <LinearLayout android:id="@+id/item_footer"
+                          android:layout_width="match_parent"
+                          android:layout_height="wrap_content"
+                          android:gravity="center"
+                          android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_section"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="3dp"/>
+
+                <TextView
+                    android:id="@+id/item_date"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="3dp"/>
+                <TextView
+                    android:id="@+id/item_author"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="3dp"/>
+
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
