--- a/app/src/main/res/layout/list_item_article.xml
+++ b/app/src/main/res/layout/list_item_article.xml
@@ -10,7 +10,8 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardview_article"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:foreground="?android:selectableItemBackground">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                       android:id="@+id/linear_layout_article_card"
